Adicionando path public para conexão com freetds

--- a/docker-php-freetds/configs/000-default.conf
+++ b/docker-php-freetds/configs/000-default.conf
@@ -1,19 +1,13 @@
 <VirtualHost *:80>
-    # Proxy .php requests to port 9000 of the php-fpm container
-    # ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://php:9000/var/www/html/$1
     ServerName 127.0.0.1
     ServerAdmin webmaster@localhost
-    DocumentRoot /var/www/html/
-    <Directory /var/www/html/>
+    DocumentRoot /var/www/html/public
+    <Directory /var/www/html/public>
         DirectoryIndex index.php
         Options Indexes FollowSymLinks
         AllowOverride All
         Require all granted
     </Directory>
-    
-    # Send apache logs to stdout and stderr
-    # CustomLog /proc/self/fd/1 common
-    # ErrorLog /proc/self/fd/2
     ErrorLog ${APACHE_LOG_DIR}/error.log
     CustomLog ${APACHE_LOG_DIR}/access.log combined
 </VirtualHost>
