removendo configuracoes de proxy

--- a/docker-php-mssql/docker-compose-with-proxy.yml
+++ b/docker-php-mssql/docker-compose-with-proxy.yml
@@ -10,6 +10,6 @@ services:
         no_proxy: "localhost,127.0.0.1,127.0.0.0/8"
     container_name: container-app-name
     volumes:
-      - ./web:/var/www/html
+      - ./web:/var/www/app
     ports:
       - "8000:80"
