--- a/docker-php-mssql/docker-compose.yml
+++ b/docker-php-mssql/docker-compose.yml
@@ -1,14 +1,7 @@
 version: '3.5'
 services:
   app:
-    # image: atmosmaciel/docker-php-mssql
-    build:
-      context: .
-      dockerfile: Dockerfile
-      args:
-        proxy: "http://4967:mdalycod@proxy.ceuma.edu.br:3128"
-        sproxy: "http://4967:mdalycod@proxy.ceuma.edu.br:3128"
-        no_proxy: "localhost,127.0.0.1,127.0.0.0/8"
+    image: atmosmaciel/docker-php-sqlsrv:latest-docker-php-mssql
     container_name: container-app-name
     volumes:
       - ./web:/var/www/app
