--- a/docker-php-mssql/configs/000-default.conf
+++ b/docker-php-mssql/configs/000-default.conf
@@ -1,8 +1,8 @@
 <VirtualHost *:80>
-    ServerName 127.0.0.1
+    ServerName localhost  
     ServerAdmin webmaster@localhost
-    DocumentRoot /var/www/html/public
-    <Directory /var/www/html/public>
+    DocumentRoot /var/www/app
+    <Directory /var/www/app>
         DirectoryIndex index.php
         Options Indexes FollowSymLinks
         AllowOverride All
