--- a/docker-php-mssql/Dockerfile
+++ b/docker-php-mssql/Dockerfile
@@ -78,16 +78,16 @@ ENV DEBIAN_FRONTEND teletype
 
 RUN echo "---> Installing Composer" \
  && curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer \
- && chmod +x /usr/local/bin/composer \
- && echo "---> Adding the Cygni user" \
- && adduser -q -u 1000 cygni \
- && usermod -aG www-data cygni \
- && mkdir -p /var/www/app \
- && chown -R cygni:cygni /var/www \
- && chown -R www-data:cygni /var/www \
- && chown -R www-data:cygni /etc/apache2 \
- && echo "cygni  ALL = ( ALL ) NOPASSWD: ALL" >> /etc/sudoers \
- && chown -R cygni:cygni /home/cygni
+ && chmod +x /usr/local/bin/composer
+#  && echo "---> Adding the Cygni user" \
+#  && adduser -q -u 1000 cygni \
+#  && usermod -aG www-data cygni \
+#  && mkdir -p /var/www/app \
+#  && chown -R cygni:cygni /var/www \
+#  && chown -R www-data:cygni /var/www \
+#  && chown -R www-data:cygni /etc/apache2 \
+#  && echo "cygni  ALL = ( ALL ) NOPASSWD: ALL" >> /etc/sudoers \
+#  && chown -R cygni:cygni /home/cygni
 
 RUN echo "---> Cleaning up" \
  && apt-get autoremove -y \
@@ -99,14 +99,14 @@ COPY configs/000-default.conf /etc/apache2/sites-available/000-default.conf
 
 RUN a2enmod rewrite && service apache2 restart
 
-# Define the running user
-USER cygni
+# # Define the running user
+# USER cygni
 
 # Application directory
 WORKDIR /var/www/app
 
-# Environment variables
-ENV PATH=/home/cygni/.composer/vendor/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+# # Environment variables
+# ENV PATH=/home/cygni/.composer/vendor/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 
 EXPOSE 80
 
