--- a/docker-compose-sample.yml
+++ b/docker-compose-sample.yml
@@ -1,6 +1,7 @@
 version: '3.5'
 services:
   app:
+  image: atmosmaciel/docker-php-sqlsrv:tagname
     build:
       context: .
       dockerfile: Dockerfile
