--- a/docker-compose-sample.yml
+++ b/docker-compose-sample.yml
@@ -1,7 +1,7 @@
 version: '3.5'
 services:
   app:
-  image: atmosmaciel/docker-php-sqlsrv:tagname
+  # image: atmosmaciel/docker-php-sqlsrv:tagname
     build:
       context: .
       dockerfile: Dockerfile
@@ -11,6 +11,6 @@ services:
         no_proxy: "localhost,127.0.0.1,127.0.0.0/8"
     container_name: container-app-name
     volumes:
-      - ./web:/var/www/app
+      - ./web-samples:/var/www/html
     ports:
       - "8000:80"
