--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '3.5'
 services:
   app:
-    image: atmosmaciel/docker-php-sqlsrv:latest-docker-php-mssql
+    # image: atmosmaciel/docker-php-sqlsrv:tagname
     container_name: container-app-name
     volumes:
-      - ./web:/var/www/app
+      - ./web-samples:/var/www/html
     ports:
       - "8000:80"
