--- a/php/7.2-apache/configs/000-default.conf
+++ b/php/7.2-apache/configs/000-default.conf
@@ -4,7 +4,9 @@
     DocumentRoot /var/www/app
     <Directory /var/www/app/public>
         DirectoryIndex index.php
+        Order allow,deny
         Options Indexes FollowSymLinks
+        Allow from all
         AllowOverride All
         Require all granted
     </Directory>
