--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.5'
 services:
   app:
-    image: devsceuma/docker-php-sqlsrv:tagname
+    image: devsceuma/docker-php-sqlsrv:7.2-apache
     container_name: container-app-name
     volumes:
       - ./web-samples:/var/www/html
