fazendo ajustes nas imagens

--- a/php/7.2-apache/configs/000-default.conf
+++ b/php/7.2-apache/configs/000-default.conf
@@ -1,10 +1,13 @@
 <VirtualHost *:80>
-    ServerName localhost  
+    ServerName localhost
+    # ServerAlias
     ServerAdmin webmaster@localhost
-    DocumentRoot /var/www/app
-    <Directory /var/www/app/public>
+    DocumentRoot /var/www/html/public
+    <Directory /var/www/html/public>
         DirectoryIndex index.php
+        # Order allow,deny
         Options Indexes FollowSymLinks
+        Allow from all
         AllowOverride All
         Require all granted
     </Directory>
