--- a/php/7.2-apache/configs/000-default.conf
+++ b/php/7.2-apache/configs/000-default.conf
@@ -1,13 +1,11 @@
 <VirtualHost *:80>
     ServerName localhost
-    # ServerAlias
+    # ServerAlias localhost
     ServerAdmin webmaster@localhost
     DocumentRoot /var/www/html/public
     <Directory /var/www/html/public>
         DirectoryIndex index.php
-        # Order allow,deny
         Options Indexes FollowSymLinks
-        Allow from all
         AllowOverride All
         Require all granted
     </Directory>
